--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,8 @@ Plugins/*/Intermediate/*
 
 # Cache files for the editor to use
 DerivedDataCache/*
+
+.idea/*
+
+Content/__ExternalActors__/*
+Content/__ExternalObjects__/*
