--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -8,13 +8,18 @@ FastReplication=False
 InvalidTagCharacters="\"\',"
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
++GameplayTagList=(Tag="Ability.Combat.SingleShot",DevComment="")
 +GameplayTagList=(Tag="Ability.Movement.Crouch",DevComment="")
 +GameplayTagList=(Tag="Ability.Movement.InAir.Jump",DevComment="")
 +GameplayTagList=(Tag="Ability.Movement.Sprint",DevComment="")
 +GameplayTagList=(Tag="Ability.Movement.Vault",DevComment="")
 +GameplayTagList=(Tag="Ability.Movement.WallRun",DevComment="")
 +GameplayTagList=(Tag="Ability.Movement.WallRun.Left",DevComment="")
++GameplayTagList=(Tag="Event.Combat.Attack.Ended",DevComment="")
++GameplayTagList=(Tag="Event.Combat.Attack.Started",DevComment="")
++GameplayTagList=(Tag="Event.Combat.Shoot",DevComment="")
 +GameplayTagList=(Tag="Event.Movement.Jump",DevComment="")
++GameplayTagList=(Tag="Movement.Enforced.Strafe",DevComment="")
 +GameplayTagList=(Tag="State.InAir.Jumping",DevComment="")
 +GameplayTagList=(Tag="State.Movement.Crouch",DevComment="")
 +GameplayTagList=(Tag="State.Movement.Sprint",DevComment="")
