--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -96,3 +96,6 @@ DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,bUseMBPOu
 MinDeltaVelocityForHitEvents=0.000000
 ChaosSettings=(DefaultThreadingModel=TaskGraph,DedicatedThreadTickMode=VariableCappedWithTarget,DedicatedThreadBufferMode=Double)
 
+[Core.Log]
+VLogAbilitySystem = Log
+LogAbilitySystem = Log
