--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -15,6 +15,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Ability.Movement.Vault",DevComment="")
 +GameplayTagList=(Tag="Ability.Movement.WallRun",DevComment="")
 +GameplayTagList=(Tag="Ability.Movement.WallRun.Left",DevComment="")
++GameplayTagList=(Tag="Attribute.Health",DevComment="")
 +GameplayTagList=(Tag="Event.Combat.Attack.Ended",DevComment="")
 +GameplayTagList=(Tag="Event.Combat.Attack.Started",DevComment="")
 +GameplayTagList=(Tag="Event.Combat.Shoot",DevComment="")
