--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -16,11 +16,14 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Ability.Movement.WallRun",DevComment="")
 +GameplayTagList=(Tag="Ability.Movement.WallRun.Left",DevComment="")
 +GameplayTagList=(Tag="Attribute.Health",DevComment="")
++GameplayTagList=(Tag="Event.Combat.Aim.Ended",DevComment="")
++GameplayTagList=(Tag="Event.Combat.Aim.Started",DevComment="")
 +GameplayTagList=(Tag="Event.Combat.Attack.Ended",DevComment="")
 +GameplayTagList=(Tag="Event.Combat.Attack.Started",DevComment="")
 +GameplayTagList=(Tag="Event.Combat.Shoot",DevComment="")
 +GameplayTagList=(Tag="Event.Movement.Jump",DevComment="")
 +GameplayTagList=(Tag="Movement.Enforced.Strafe",DevComment="")
++GameplayTagList=(Tag="State.Combat.Aiming",DevComment="")
 +GameplayTagList=(Tag="State.InAir.Jumping",DevComment="")
 +GameplayTagList=(Tag="State.Movement.Crouch",DevComment="")
 +GameplayTagList=(Tag="State.Movement.Sprint",DevComment="")
