--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -9,6 +9,7 @@ InvalidTagCharacters="\"\',"
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Ability.Combat.SingleShot",DevComment="")
++GameplayTagList=(Tag="Ability.Death",DevComment="")
 +GameplayTagList=(Tag="Ability.Movement.Crouch",DevComment="")
 +GameplayTagList=(Tag="Ability.Movement.InAir.Jump",DevComment="")
 +GameplayTagList=(Tag="Ability.Movement.Sprint",DevComment="")
@@ -16,6 +17,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Ability.Movement.WallRun",DevComment="")
 +GameplayTagList=(Tag="Ability.Movement.WallRun.Left",DevComment="")
 +GameplayTagList=(Tag="Attribute.Health",DevComment="")
++GameplayTagList=(Tag="Attribute.Health.Zero",DevComment="")
 +GameplayTagList=(Tag="Event.Combat.Aim.Ended",DevComment="")
 +GameplayTagList=(Tag="Event.Combat.Aim.Started",DevComment="")
 +GameplayTagList=(Tag="Event.Combat.Attack.Ended",DevComment="")
@@ -24,6 +26,8 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Event.Movement.Jump",DevComment="")
 +GameplayTagList=(Tag="Movement.Enforced.Strafe",DevComment="")
 +GameplayTagList=(Tag="State.Combat.Aiming",DevComment="")
++GameplayTagList=(Tag="State.Dead",DevComment="")
++GameplayTagList=(Tag="State.Death",DevComment="")
 +GameplayTagList=(Tag="State.InAir.Jumping",DevComment="")
 +GameplayTagList=(Tag="State.Movement.Crouch",DevComment="")
 +GameplayTagList=(Tag="State.Movement.Sprint",DevComment="")
@@ -31,4 +35,5 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="State.Movement.WallRun",DevComment="")
 +GameplayTagList=(Tag="State.Movement.WallRun.Left",DevComment="")
 +GameplayTagList=(Tag="State.Movement.WallRun.Right",DevComment="")
++GameplayTagList=(Tag="State.Ragdoll",DevComment="")
 
