--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -23,6 +23,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Event.Combat.Attack.Ended",DevComment="")
 +GameplayTagList=(Tag="Event.Combat.Attack.Started",DevComment="")
 +GameplayTagList=(Tag="Event.Combat.Shoot",DevComment="")
++GameplayTagList=(Tag="Event.Movement.Crouch",DevComment="")
 +GameplayTagList=(Tag="Event.Movement.Jump",DevComment="")
 +GameplayTagList=(Tag="Movement.Enforced.Strafe",DevComment="")
 +GameplayTagList=(Tag="State.Combat.Aiming",DevComment="")
